@@ -1,0 +1,62 @@
+class 'Fl::LineDial';
+isa 'Fl::Dial';
+include 'FL/Fl_Line_Dial.H';
+
+=pod
+
+=head1 NAME
+
+Fl::LineDial - Circular Dial to Control a Single Floating Point Value
+
+=head1 Description
+
+The Fl::LineDial widget proides a circular dial to control a single floating
+point value.
+
+=for html <center><img src="http://www.fltk.org/doc-1.3/dial.png" /></center>
+
+=head1 Methods
+
+Fl::LineDial inherits from Fl::Dial and Fl::Widget. On top of that, it exposes
+the following methods...
+
+=head2 new(...)
+
+    my $dial_a = Fl::LineDial->new(0, 0, 250, 500, 'Important Stuff');
+    my $dial_b = Fl::LineDial->new(0, 0, 250, 500);
+
+The constructor creates a new widget using the given position, size, and
+label.
+
+The default type is FL_LINE_DIAL.
+
+The destructor removes the widget.
+
+=cut
+
+xs {name        => 'new',
+    definitions => [
+            {required => [[qw[int x]], [qw[int y]], [qw[int w]], [qw[int h]]],
+             optional => [['const char *', 'label', ' 0']],
+             returns  => 'Fl_Line_Dial *'
+            }
+    ]
+};
+xs {name        => 'DESTROY',
+    definitions => [{returns => 'void'}]
+};
+
+=pod
+
+=head1 LICENSE
+
+Copyright (C) Sanko Robinson.
+
+This library is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself.
+
+=head1 AUTHOR
+
+Sanko Robinson E<lt>sanko@cpan.orgE<gt>
+
+=cut
