@@ -57,5 +57,6 @@ typedef CTX* Fl__Counter;
 typedef CTX* Fl__SimpleCounter;
 typedef CTX* Fl__Dial;
 typedef CTX* Fl__FillDial;
+typedef CTX* Fl__LineDial;
 
 #endif // #ifndef fltk_pm_h
